@@ -20,6 +20,7 @@
 package org.xwiki.csrf;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -44,6 +45,8 @@ import org.xwiki.test.junit5.mockito.InjectMockComponents;
 import org.xwiki.test.junit5.mockito.MockComponent;
 import org.xwiki.test.mockito.MockitoComponentManager;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.matchesPattern;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -64,7 +67,7 @@ import static org.mockito.Mockito.when;
  * @since 2.5M2
  */
 @ComponentTest
-public class DefaultCSRFTokenTest
+class DefaultCSRFTokenTest
 {
     /** URL of the current document. */
     private static final String mockDocumentUrl = "http://host/xwiki/bin/save/Main/Test";
@@ -85,7 +88,7 @@ public class DefaultCSRFTokenTest
     /**
      * This class is here because it doesn't require a SecureRandom generator
      * seed on each startup. Seeding a SecureRandom generator can take a very long time,
-     * especially many time over which depleats the random pool on the server.
+     * especially many times over which depletes the random pool on the server.
      */
     public static class InsecureCSRFToken extends DefaultCSRFToken
     {
@@ -105,7 +108,7 @@ public class DefaultCSRFTokenTest
     }
 
     @BeforeEach
-    public void configure(MockitoComponentManager componentManager) throws Exception
+    void configure(MockitoComponentManager componentManager) throws Exception
     {
         // set up mocked dependencies
         final CopyStringMatcher returnValue = new CopyStringMatcher(resubmitUrl + "?", "");
@@ -135,9 +138,8 @@ public class DefaultCSRFTokenTest
 
     /**
      * Add a mocking role to have a logged user.
-     * @throws Exception if problems occur
      */
-    private void userIsLogged() throws Exception
+    private void userIsLogged()
     {
         // document access bridge
         when(mockDocumentAccessBridge.getCurrentUserReference())
@@ -148,7 +150,7 @@ public class DefaultCSRFTokenTest
      * Test that the secret token is a non-empty string.
      */
     @Test
-    public void testToken() throws Exception
+    void getTokenIsNotEmptyWithLoggedUser()
     {
         userIsLogged();
 
@@ -162,7 +164,7 @@ public class DefaultCSRFTokenTest
      * Test that the secret token is a non-empty string, even for guest user.
      */
     @Test
-    public void testTokenForGuestUser() throws Exception
+    void getTokenIsNotEmptyWithGuestUser()
     {
         String token = this.csrf.getToken();
         assertNotNull(token, "CSRF token is null");
@@ -174,7 +176,7 @@ public class DefaultCSRFTokenTest
      * Test that the same secret token is returned on subsequent calls.
      */
     @Test
-    public void testTokenTwice() throws Exception
+    void getTokenSameWhenCalledTwice()
     {
         userIsLogged();
 
@@ -189,7 +191,7 @@ public class DefaultCSRFTokenTest
      * Test that the produced valid secret token is indeed valid.
      */
     @Test
-    public void testTokenValidity() throws Exception
+    void getTokenIsValid()
     {
         userIsLogged();
 
@@ -201,31 +203,31 @@ public class DefaultCSRFTokenTest
      * Test that null is not valid.
      */
     @Test
-    public void testNullNotValid() throws Exception
+    void isTokenValidWhenNull()
     {
         userIsLogged();
         assertFalse(this.csrf.isTokenValid(null), "Null passed validity check");
-        assertTrue(logCapture.getMessage(0).startsWith("CSRFToken: Secret token verification failed, token: "
-            + "\"null\", stored token:"));
+        assertThat(logCapture.getMessage(0), matchesPattern("Secret CSRF token verification failed \\(token: \\[null], "
+            + "stored token: \\[.*]\\)"));
     }
 
     /**
      * Test that empty string is not valid.
      */
     @Test
-    public void testEmptyNotValid() throws Exception
+    void isTokenValidWhenEmpty()
     {
         userIsLogged();
         assertFalse(this.csrf.isTokenValid(""), "Empty string passed validity check");
-        assertTrue(logCapture.getMessage(0).startsWith("CSRFToken: Secret token verification failed, token: "
-            + "\"\", stored token:"));
+        assertThat(logCapture.getMessage(0), matchesPattern("Secret CSRF token verification failed \\(token: \\[], "
+            + "stored token: \\[.*]\\)"));
     }
 
     /**
      * Test that the prefix of the valid token is not valid.
      */
     @Test
-    public void testPrefixNotValid() throws Exception
+    void testPrefixNotValid()
     {
         userIsLogged();
 
@@ -234,14 +236,14 @@ public class DefaultCSRFTokenTest
             token = token.substring(0, token.length() - 2);
         }
         assertFalse(this.csrf.isTokenValid(token), "Null passed validity check");
-        assertTrue(logCapture.getMessage(0).startsWith("CSRFToken: Secret token verification failed, token: "));
+        assertTrue(logCapture.getMessage(0).startsWith("Secret CSRF token verification failed"));
     }
 
     /**
      * Test that the resubmission URL is correct.
      */
     @Test
-    public void testResubmissionURL() throws Exception
+    void testResubmissionURL() throws Exception
     {
         userIsLogged();
 
@@ -249,8 +251,8 @@ public class DefaultCSRFTokenTest
         // srid is random, extract it from the url
         Matcher matcher = Pattern.compile(".*srid%3D([a-zA-Z0-9]+).*").matcher(url);
         String srid = matcher.matches() ? matcher.group(1) : "asdf";
-        String resubmit = URLEncoder.encode(mockDocumentUrl + "?srid=" + srid, "utf-8");
-        String back = URLEncoder.encode(mockDocumentUrl, "utf-8");
+        String resubmit = URLEncoder.encode(mockDocumentUrl + "?srid=" + srid, StandardCharsets.UTF_8);
+        String back = URLEncoder.encode(mockDocumentUrl, StandardCharsets.UTF_8);
         String expected = resubmitUrl + "?resubmit=" + resubmit + "&xback=" + back + "&xpage=resubmit";
         assertEquals(expected, url, "Invalid resubmission URL");
     }
@@ -259,7 +261,7 @@ public class DefaultCSRFTokenTest
      * Test that the request URI is correct.
      */
     @Test
-    public void testRequestURI() throws Exception
+    void testRequestURI()
     {
         userIsLogged();
 
@@ -276,7 +278,7 @@ public class DefaultCSRFTokenTest
      * where XWiki-syntax is allowed.
      */
     @Test
-    public void testXWikiSyntaxCompatibility() throws Exception
+    void testXWikiSyntaxCompatibility()
     {
         userIsLogged();
 
